[package]
name = "wisp-server"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 1
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ['cors'] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
rand = "0.9.2"
resend-rs = "0.19.0"
dashmap = "7.0.0-rc2"
once_cell = "1.21.3"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }